Update TrainingSessions and EmployeeCertifications pages

--- a/views/employees.hbs
+++ b/views/employees.hbs
@@ -120,7 +120,7 @@
       <fieldset>
         <label>First Name: <input type="text" name="fname" /></label>
         <label>Last Name: <input type="text" name="lname" /></label>
-        <label>Email: <input type="text" name="email" /></label>
+        <label>Email: <input class="longInput" type="text" name="email" /></label>
         <label>Department ID: <input type="text" name="deptID" /></label>
       </fieldset>
       <input class="btn" type="submit" value="Add Employee" />
