Update EmployeeCertifications and EmployeeTrainingSessions pages

--- a/views/employees_cert.hbs
+++ b/views/employees_cert.hbs
@@ -57,7 +57,7 @@
             <label>Date Obtained: <input type="date" name="dateObtained"></label>
             <label>Expiration Date: <input type="date" name="expirationDate"></label>
             <button type="submit">Submit</button>
-            <button type="button" onClick="broseMain()">Cancel</button>
+            <button type="button" onClick="browseMain()">Cancel</button>
         </form>
     </div>
 
@@ -70,7 +70,7 @@
             <label>Date Obtained: <input type="date" id="updateEmployeeCertDateObtained" name="dateObtained"></label>
             <label>Expiration Date: <input type="date" id="updateEmployeeCertExpirationDate" name="expirationDate"></label>
             <button type="submit">Update</button>
-            <button type="button" onClick="broseMain()">Cancel</button>
+            <button type="button" onClick="browseMain()">Cancel</button>
         </form>
     </div> 
 
@@ -80,7 +80,7 @@
         <p>Are you sure you want to delete the certification for Employee ID: <span id="deleteEmployeeCertEmployeeID"></span> and Certification ID: <span id="deleteEmployeeCertCertID"></span>?</p>
         <input type="hidden" name="id" id="deleteEmployeeCertID" />
         <button type="submit">Delete</button>
-        <button type="button" onClick="broseMain()">Cancel</button>
+        <button type="button" onClick="browseMain()">Cancel</button>
     </form>
     </div>
 </main>
