--- a/views/index.hbs
+++ b/views/index.hbs
@@ -22,7 +22,7 @@
   <p><a href="/employees_cert">Employee Certifications</a> | 
     Assign, update, and manage certifications for each employee. Keep track of
     certification expiry and renewals.</p>
-  <p><a href="/employees_train">Employee Training Sessions</a> | 
+  <p><a href="/employees_train">Employee Trainings</a> | 
     Assign, update, and manage employee training sessions for each employee.</p>
 </nav>
 <main>
